Insta logo & Rights

--- a/bold.html
+++ b/bold.html
@@ -22,6 +22,7 @@
         <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
     </div>
     <div style="flex-grow: 1;width: 33.3332%">
+        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" class ="center" style="width: 20px; padding-top: 33px"> </a>
     </div>
 </header>
 <div style="text-align: center; padding-top: 30px " >
@@ -44,7 +45,7 @@
         </th>
         <th style="width:15.6%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/orange3.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -60,16 +61,7 @@
 
 </table>
 
-<table style="padding-top: 100px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <th style="width:50%">
-        <div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
-            <div class="content_img"><p>MILAN, 2021</p></div>
-        </div>
-    </th>
-</table>
-
-<table style="padding-top: 100px; width: 60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 150px; width: 60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
             <div class="content_img">
@@ -100,7 +92,7 @@
 <table style="padding-top: -10px; width:60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue5.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -118,33 +110,7 @@
         </th>
 </table>
 
-<table style="padding-top: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:43.3%" >
-            <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
-
-            </div>
-        </th>
-        <th style="width:38.8%;" rowspan="2">
-            <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char4.webp" style="width: 100%">
-
-            </div>
-        </th>
-    </tr>
-    <tr>
-        <th style="width:43.3%;" >
-            <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char2.webp" style="width: 100%">
-
-            </div>
-        </th>
-    </tr>
-
-</table>
-
-<table style="padding-top: 100px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 150px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
@@ -158,6 +124,24 @@
         <th style="width:50%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/red2.webp" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+    </tr>
+</table>
+
+<table style="padding-top: 8px; width: 50%;">
+    <tr>
+        <th style="width:45%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/green1.webp" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+        <th style="width:1%"></th>
+        <th style="width:45%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/green2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -262,12 +246,6 @@
         </th>
     </tr>
 </table>
-<div style="text-align: center; padding-top: 30px;padding-bottom: 300px; " >
-    <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5; opacity: 0.8">Thank you!</p>
-</div>
-
-
-
 
 
 
@@ -281,6 +259,10 @@
 
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
+</div>
+
+<div class = footer style="padding-bottom: 50px">
+    <p> 2024 © All rights reserved | Tiago Coelho</p>
 </div>
 
 
