--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
   </style>
 </head>
-<body bgcolor="#1F1F1F">
+<body>
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
   <div style="width: 33.3332%; text-align: left; padding-top: 30px">
     <a href="index.html"style="padding-left: 100px"> WORK </a></td>
@@ -58,9 +58,9 @@
   </div>
   <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
     <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
-
   </div>
   <div style="flex-grow: 1;width: 33.3332%">
+    <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" class ="center" style="width: 20px; padding-top: 33px"> </a>
   </div>
 </header>
 <div style="padding-top: 100px"></div>
@@ -103,5 +103,10 @@
       </th>
     </tr>
   </table>
+
+<div class = footer style="padding-top: 150px">
+  <p> 2024 © All rights reserved | Tiago Coelho</p>
+</div>
+
 </body>
 </html>
