--- a/matte.html
+++ b/matte.html
@@ -22,6 +22,7 @@
         <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
     </div>
     <div style="flex-grow: 1;width: 33.3332%">
+        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" class ="center" style="width: 20px; padding-top: 33px"> </a>
     </div>
 </header>
 <div style="text-align: center; padding-top: 30px " >
@@ -292,7 +293,7 @@
     </tr>
 </table>
 <div style="padding-top: 8px"/>
-<table cellpadding="0" border="0" style="width: 60%; padding-bottom: 200px" >
+<table cellpadding="0" border="0" style="width: 60%; padding-bottom: 100px" >
     <th style="width:36%">
         <div class="content_img">
             <img class = "myImages" id="myImg" src="Images/chinatown.webp" style="width: 100%">
@@ -328,6 +329,10 @@
 
     <!-- Modal Caption (Image Text) -->
     <div id="caption"></div>
+</div>
+
+<div class = footer style="padding-bottom: 50px">
+    <p> 2024 © All rights reserved | Tiago Coelho</p>
 </div>
 
 
