--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
   </div>
 </header>
 <div style="padding-top: 100px"></div>
-
   <table style="width:70%; align: center">
     <tr style="width:50%; align:center">
       <th>
         <div class="container2">
-          <img src="Images/ass3.webp" alt="" class="image">
+          <img src="Images/ass3.webp" alt="" class="image" style="opacity: 0.9">
           <a href="matte.html">
             <div class="overlay">
               <img src="Images/ass5.webp" alt="" class="image">
@@ -86,7 +85,7 @@
       </th>
       <th>
         <div class="container2">
-          <img src="Images/assc.webp" alt="" class="image">
+          <img src="Images/assc.webp" alt="" class="image" style="opacity: 0.9">
           <a href="bold.html">
             <div class="overlay">
               <img src="Images/ass2.webp" alt="" class="image">
