--- a/bold.html
+++ b/bold.html
@@ -8,32 +8,26 @@
 </head>
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
-    <div style="width: 33.3332%; text-align: left; padding-top: 30px">
-        <table>
-            <td style="width: 50%">
-                <a href="index.html"style="padding-left: 100px"> WORK </a>
-            </td>
-            <td style="width: 50%; padding-left: 10px; padding-top: 4px">
-                <a href = "mailto: info@tfcoelho.com">Contact</a>
-            </td>
-        </table>
+    <div style="width: 33.3332%; text-align: center; padding-top: 30px">
+        <a href="index.html"style="padding-left: 100px"> WORK </a></td>
+        <a href = "mailto: info@tfcoelho.com" style="padding-left: 20px"> CONTACT </a>
     </div>
     <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
         <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
     </div>
-    <div style="flex-grow: 1;width: 33.3332%">
-        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" class ="center" style="width: 20px; padding-top: 33px"> </a>
+    <div style="flex-grow: 1;width: 33.3332%; text-align: center">
+        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" style="width: 20px; padding-top: 33px"> </a>
     </div>
 </header>
 <div style="text-align: center; padding-top: 30px " >
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">BOLD</p>
-    <p STYLE="color: #8a8788; font-size: 20px;line-height: 1"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
+    <p STYLE="color: #8a8788; font-size: 15px"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
 </div>
-<table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="width: 67%; padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange1.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -61,16 +55,16 @@
 
 </table>
 
-<table style="padding-top: 100px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
         <div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
+            <img class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
             <div class="content_img"><p>MILAN, 2021</p></div>
         </div>
     </th>
 </table>
 
-<table style="padding-top: 100px; width: 60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
             <div class="content_img">
@@ -98,7 +92,7 @@
         </th>
     </tr>
 </table>
-<table style="padding-top: -10px; width:60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
@@ -119,25 +113,25 @@
         </th>
 </table>
 
-<table style="padding-top: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
-        <th style="width:43.3%" >
+        <th style="width:45.5%" >
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
 
             </div>
         </th>
         <th style="width:38.8%;" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char4.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/letyago.webp" style="width: 100%">
 
             </div>
         </th>
     </tr>
     <tr>
-        <th style="width:43.3%;" >
+        <th style="width:45.5%;" >
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char2.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/stage1.webp" style="width: 100%">
 
             </div>
         </th>
@@ -145,11 +139,11 @@
 
 </table>
 
-<table style="padding-top: 100px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -158,14 +152,14 @@
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red2.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
 </table>
 
-<table style="padding-top: 100px;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
             <div class="content_img">
@@ -183,7 +177,7 @@
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white2.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/moch1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -196,7 +190,7 @@
         </th>
     </tr>
 </table>
-<table style="padding-top: 2px;">
+<table style="width: 67%;padding-top: 2px;">
     <tr>
         <th style="width:67%">
             <div class="content_img">
@@ -218,7 +212,7 @@
     <tr>
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out1.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out7.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -243,7 +237,7 @@
 
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out5.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/moch2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -257,7 +251,7 @@
     <tr>
         <th colspan="6">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/pano.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/henrico.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
