--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 </head>
 <body>
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
-  <div style="width: 33.3332%; text-align: left; padding-top: 30px">
+  <div style="width: 33.3332%; text-align: center; padding-top: 30px">
     <a href="index.html"style="padding-left: 100px"> WORK </a></td>
     <a href = "mailto: info@tfcoelho.com" style="padding-left: 20px"> CONTACT </a>
   </div>
   <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
     <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
   </div>
-  <div style="flex-grow: 1;width: 33.3332%">
-    <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" class ="center" style="width: 20px; padding-top: 33px"> </a>
+  <div style="flex-grow: 1;width: 33.3332%; text-align: center">
+    <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" style="width: 20px; padding-top: 33px"> </a>
   </div>
 </header>
 <div style="padding-top: 100px"></div>
