--- a/matte.html
+++ b/matte.html
@@ -8,28 +8,22 @@
 </head>
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
-    <div style="width: 33.3332%; text-align: left; padding-top: 30px">
-        <table>
-            <td style="width: 50%">
-                <a href="index.html"style="padding-left: 100px"> WORK </a>
-            </td>
-            <td style="width: 50%; padding-left: 10px; padding-top: 4px">
-                <a href = "mailto: info@tfcoelho.com">contact</a>
-            </td>
-        </table>
+    <div style="width: 33.3332%; text-align: center; padding-top: 30px">
+        <a href="index.html"style="padding-left: 100px"> WORK </a></td>
+        <a href = "mailto: info@tfcoelho.com" style="padding-left: 20px"> CONTACT </a>
     </div>
     <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
         <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
     </div>
-    <div style="flex-grow: 1;width: 33.3332%">
-        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" class ="center" style="width: 20px; padding-top: 33px"> </a>
+    <div style="flex-grow: 1;width: 33.3332%; text-align: center">
+        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" style="width: 20px; padding-top: 33px"> </a>
     </div>
 </header>
 <div style="text-align: center; padding-top: 30px " >
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">MATTE</p>
     <p STYLE="color: #8a8788; font-size: 20px;line-height: 1"> THE BEAUTY OF DIFFUSE REFLECTION </p>
 </div>
-<table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 50px; border-collapse: collapse" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:26.40%">
             <div class="content_img">
