--- a/bold.html
+++ b/bold.html
@@ -23,6 +23,8 @@
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">BOLD</p>
     <p STYLE="color: #8a8788; font-size: 15px"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
 </div>
+
+
 <table style="width: 67%; padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
@@ -63,7 +65,6 @@
         </div>
     </th>
 </table>
-
 <table style="padding-top: 100px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
@@ -92,6 +93,7 @@
         </th>
     </tr>
 </table>
+
 <table style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
@@ -112,6 +114,18 @@
             </div>
         </th>
 </table>
+
+<table style="padding-top: 100px; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:50%">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
+                <div class="content_img"><p>MILAN, 2021</p></div>
+            </div>
+        </th>
+    </tr>
+</table>
+
 
 <table style="padding-top: 100px;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
@@ -143,21 +157,14 @@
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
-            </div>
-        </th>
-    </tr>
-    <tr style="height: 8px"></tr>
-    <tr>
-        <th style="width:50%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
 </table>
+
+
 
 <table style="padding-top: 100px;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
@@ -208,6 +215,7 @@
     </tr>
 </table>
 
+
 <table style="padding-top: 100px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
@@ -251,7 +259,7 @@
     <tr>
         <th colspan="6">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/henrico.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/panoo.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
