--- a/matte.html
+++ b/matte.html
@@ -9,8 +9,7 @@
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
     <div style="width: 33.3332%; text-align: center; padding-top: 30px">
-        <a href="index.html"style="padding-left: 100px"> WORK </a></td>
-        <a href = "mailto: info@tfcoelho.com" style="padding-left: 20px"> CONTACT </a>
+        <a href = "mailto: info@tfcoelho.com"> CONTACT </a>
     </div>
     <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
         <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
