--- a/bold.html
+++ b/bold.html
@@ -6,26 +6,42 @@
     <link rel="stylesheet" href="main.css">
     <title>Tiago's Portfolio</title>
     <link rel="icon" href="Images/ass.webp">
+    <style>
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 70px;
+            height: 100px;
+        }
+
+        .header-item {
+            flex: 1; /* Ensures that each header item takes equal space */
+            text-align: center;
+        }
+    </style>
 </head>
 <body bgcolor="#1F1F1F">
-<header class="container" style="display: flex; height: 100px; padding-top: 70px">
-    <div style="width: 33.3332%; text-align: center; padding-top: 30px">
-        <a href = "mailto: info@tfcoelho.com" style="padding-left: 20px"> CONTACT </a>
+
+<header class="header-container">
+    <div class="header-item">
+        <a href="mailto:info@tfcoelho.com">CONTACT</a>
     </div>
-    <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
-        <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
+    <div class="header-item">
+        <a href="index.html"><img src="Images/Signature.png" alt="Signature" class="center"></a>
     </div>
-    <div style="flex-grow: 1;width: 33.3332%; text-align: center">
-        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" style="width: 20px; padding-top: 33px"> </a>
+    <div class="header-item">
+        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" alt="Instagram" style="width: 20px;"></a>
     </div>
 </header>
-<div style="text-align: center; padding-top: 30px " >
+
+<div style="text-align: center; padding-top: 3%" >
     <p STYLE="font-size: 35px; color: #FFFFFF; font-weight: 100; line-height: 0.5">BOLD</p>
-    <p STYLE="color: #8a8788; font-size: 15px"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
+    <p STYLE="color: #8a8788; font-size: 80%"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
 </div>
 
 
-<table style="width: 67%; padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
             <div class="content_img">
@@ -54,10 +70,9 @@
             </div>
         </th>
     </tr>
-
 </table>
 
-<table style="padding-top: 100px; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
         <div class="content_img">
             <img class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
@@ -65,7 +80,7 @@
         </div>
     </th>
 </table>
-<table style="padding-top: 100px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
             <div class="content_img">
@@ -115,7 +130,7 @@
         </th>
 </table>
 
-<table style="padding-top: 100px; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
@@ -127,7 +142,7 @@
 </table>
 
 
-<table style="padding-top: 100px;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:45.5%" >
             <div class="content_img">
@@ -153,7 +168,7 @@
 
 </table>
 
-<table style="padding-top: 100px; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
@@ -166,7 +181,7 @@
 
 
 
-<table style="padding-top: 100px;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
             <div class="content_img">
@@ -216,7 +231,7 @@
 </table>
 
 
-<table style="padding-top: 100px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
             <div class="content_img">
