--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       flex-direction: row;
       justify-content: center;
       gap: 10px; /* Spacing between items */
-      padding-top: 100px;
+      padding-top: 5%;
     }
 
     .container2 {
@@ -110,7 +110,7 @@
         <img src="Images/ass5.webp" alt="" class="image">
       </div>
         <div class="text2">
-          <p style="font-size: 30px;font-weight: normal; line-height: 0.9; opacity: 1">PERSONAL COLLECTION</p>
+          <p style="font-size: 25px;font-weight: normal; line-height: 0.9; opacity: 1">PERSONAL COLLECTION</p>
           <p style="font-size: 20px;font-weight: normal; line-height: 0.3; padding-top: 0px">MATTE</p>
           <p style="line-height: 0.3">2022</p>
         </div>
@@ -123,7 +123,7 @@
         <img src="Images/ass2.webp" alt="" class="image">
       </div>
         <div class="text2">
-          <p style="font-size: 30px;font-weight: normal; line-height: 0.9; opacity: 1">EVENT Photography</p>
+          <p style="font-size: 25px;font-weight: normal; line-height: 0.9; opacity: 1">EVENT Photography</p>
           <p style="font-size: 20px;font-weight: normal; line-height: 0.3; padding-top: 0px">BOLD</p>
           <p style="line-height: 0.3">2023</p>
         </div>
