--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding-top: 70px;
+      padding-top: 5%;
       height: 100px;
     }
 
