--- a/bold.html
+++ b/bold.html
@@ -281,7 +281,7 @@
     </tr>
 </table>
 
-<div class = footer style="padding-bottom: 50px">
+<div class = footer style="padding-bottom: 5%">
     <p> 2024 © All rights reserved | Tiago Coelho</p>
 </div>
 
