--- a/matte.html
+++ b/matte.html
@@ -341,7 +341,7 @@
     <div id="caption"></div>
 </div>
 
-<div class = footer style="padding-bottom: 50px">
+<div class = footer style="padding-bottom: 5%">
     <p> 2024 © All rights reserved | Tiago Coelho</p>
 </div>
 
