--- a/bold.html
+++ b/bold.html
@@ -19,6 +19,12 @@
             flex: 1; /* Ensures that each header item takes equal space */
             text-align: center;
         }
+
+        @media only screen and (max-width: 768px) {
+            .Hide{
+                display: none;
+            }
+        }
     </style>
 </head>
 <body bgcolor="#1F1F1F">
@@ -142,7 +148,7 @@
 </table>
 
 
-<table style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:45.5%" >
             <div class="content_img">
@@ -231,7 +237,7 @@
 </table>
 
 
-<table style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
             <div class="content_img">
