trying lazy loading

--- a/bold.html
+++ b/bold.html
@@ -51,19 +51,19 @@
     <tr>
         <th style="width:38.5%" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:35%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:15.6%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -71,7 +71,7 @@
     <tr>
         <th style="width:50%;" colspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange4.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange4.webp" style="width: 100%">
                 <div><p>PARIS, 2021</p></div>
             </div>
         </th>
@@ -81,7 +81,7 @@
 <table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
         <div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
+            <img  loading="lazy" class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
             <div class="content_img"><p>MILAN, 2021</p></div>
         </div>
     </th>
@@ -90,25 +90,25 @@
     <tr>
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue2.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue2.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue3.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue4.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue4.webp" style="width: 100%">
                 <div><p>PARIS, 2021</p></div>
             </div>
         </th>
@@ -118,19 +118,19 @@
 <table style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue6.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue6.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue7.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue7.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -140,7 +140,7 @@
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -152,13 +152,13 @@
     <tr>
         <th style="width:45.5%" >
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
 
             </div>
         </th>
         <th style="width:38.8%;" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/letyago.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/letyago.webp" style="width: 100%">
 
             </div>
         </th>
@@ -166,7 +166,7 @@
     <tr>
         <th style="width:45.5%;" >
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/stage1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/stage1.webp" style="width: 100%">
 
             </div>
         </th>
@@ -178,7 +178,7 @@
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -191,28 +191,28 @@
     <tr>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white3.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/moch1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/moch1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white4.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white4.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -222,14 +222,14 @@
     <tr>
         <th style="width:67%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:0.5%"></th>
         <th style="width:30%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white5.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white5.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
