--- a/bold.html
+++ b/bold.html
@@ -47,7 +47,7 @@
 </div>
 
 
-<table style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
             <div class="content_img">
@@ -78,7 +78,7 @@
     </tr>
 </table>
 
-<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
         <div class="content_img">
             <img  loading="lazy" class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
@@ -86,7 +86,7 @@
         </div>
     </th>
 </table>
-<table style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
             <div class="content_img">
@@ -115,7 +115,7 @@
     </tr>
 </table>
 
-<table style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
@@ -136,7 +136,7 @@
         </th>
 </table>
 
-<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
@@ -148,7 +148,7 @@
 </table>
 
 
-<table class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:45.5%" >
             <div class="content_img">
@@ -174,7 +174,7 @@
 
 </table>
 
-<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
@@ -187,7 +187,7 @@
 
 
 
-<table style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
             <div class="content_img">
@@ -218,7 +218,7 @@
         </th>
     </tr>
 </table>
-<table style="width: 67%;padding-top: 2px;">
+<table loading="lazy" style="width: 67%;padding-top: 2px;">
     <tr>
         <th style="width:67%">
             <div class="content_img">
@@ -237,7 +237,7 @@
 </table>
 
 
-<table class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table loading="lazy" class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
             <div class="content_img">
