--- a/bold.html
+++ b/bold.html
@@ -46,25 +46,21 @@
     <p STYLE="color: #8a8788; font-size: 80%"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
 </div>
 
-
 <table loading="lazy" style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:35%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
-                <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:15.6%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -72,7 +68,6 @@
         <th style="width:50%;" colspan="2">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange4.webp" style="width: 100%">
-                <div><p>PARIS, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -82,7 +77,6 @@
     <th style="width:50%">
         <div class="content_img">
             <img  loading="lazy" class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
-            <div class="content_img"><p>MILAN, 2021</p></div>
         </div>
     </th>
 </table>
@@ -91,25 +85,21 @@
         <th style="width:8%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue2.webp" style="width: 100%">
-                <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue3.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue4.webp" style="width: 100%">
-                <div><p>PARIS, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -119,19 +109,16 @@
         <th style="width:8%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue6.webp" style="width: 100%">
-                <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue7.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
             </div>
         </th>
 </table>
@@ -141,7 +128,6 @@
         <th style="width:50%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -153,13 +139,11 @@
         <th style="width:45.5%" >
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
-
             </div>
         </th>
         <th style="width:38.8%;" rowspan="2">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/letyago.webp" style="width: 100%">
-
             </div>
         </th>
     </tr>
@@ -167,11 +151,9 @@
         <th style="width:45.5%;" >
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/stage1.webp" style="width: 100%">
-
             </div>
         </th>
     </tr>
-
 </table>
 
 <table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
@@ -179,7 +161,6 @@
         <th style="width:50%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -192,28 +173,24 @@
         <th style="width:20%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white3.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/moch1.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white4.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -223,14 +200,12 @@
         <th style="width:67%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:0.5%"></th>
         <th style="width:30%">
             <div class="content_img">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white5.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -242,38 +217,32 @@
         <th style="width:16.66%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out7.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:16.66%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out2.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:16.66%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out3.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:16.66%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out4.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
 
         <th style="width:16.66%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/moch2.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:14.9%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/out6.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -281,7 +250,6 @@
         <th colspan="6">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/panoo.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
     </tr>
@@ -307,8 +275,7 @@
     <div id="caption"></div>
 </div>
 
-
-<script>
+<script class = "Hide">
     // create references to the modal...
     var modal = document.getElementById('myModal');
     // to all images -- note I'm using a class!
@@ -361,5 +328,6 @@
     };
 
 </script>
+
 </body>
 </html>
