more content on desktop

--- a/bold.html
+++ b/bold.html
@@ -25,6 +25,11 @@
                 display: none;
             }
         }
+        @media (min-width: 769px) {
+            .desktop {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body bgcolor="#1F1F1F">
@@ -254,6 +259,10 @@
         </th>
     </tr>
 </table>
+
+<div class = desktop style="padding-bottom: 5%">
+    <p> More content on Desktop.</p>
+</div>
 
 <div class = footer style="padding-bottom: 5%">
     <p> 2024 © All rights reserved | Tiago Coelho</p>
